GNOME Bugzilla – Bug 764506
Nautilus no longer respects the default app for a file type if the file is located on a network share
Last modified: 2016-04-26 09:33:44 UTC
Since 3.20, a default app that's been set up for a file type is no longer used on files that are located on a network share. I can reproduce it as: 1. I've set up mcomix to open zip files by default. 2. Double clicking on a zip file in the local computer correctly uses mcomix for the file. 3. When I double click on a zip file on an smb share, file-roller is used. 3a. Right clicking also shows file-roller as the app that would be used. 4a. The 'Open with' tab on that same file shows mcomix as the default application. 4b. Using the open-with context submenu on that file and selecting mcomix works 4c. Double-clicking on the file in 3.18 worked correctly.
Can you check the default application set in nautilus? Rigth click -> properties -> Open With
Already mentioned that in point 4a
I can reproduce. If I understood correctly, this was working fine for you in 3.18?
Yes. In 3.18, mcomix was used as a default in network shares.
Created attachment 326741 [details] [review] directory, file: add function to query FUSE handling We use checks to know whether a file is local, using g_file_is_native. However, we also need to know for some cases when a file, even if no native, can be handled like native, using FUSE. This will be needed for the selection of default applications on remote locations, and will be used in a upcoming patch.
Created attachment 326742 [details] [review] mime-actions: check for fuse for default applications We were checking if the file is native, and if not, we request the default applications that they must handle uris. However, we can use FUSE in order to convert those uris to local paths and therefore use a wider variety of applications. This fix some default application not being available in network locations.
Attachment 326741 [details] pushed as 2f1765d - directory, file: add function to query FUSE handling Attachment 326742 [details] pushed as 4df06e7 - mime-actions: check for fuse for default applications