libnautilus-private/nautilus-directory.c
@@ -567,15 +567,42 @@ nautilus_directory_new (GFile *location)
 gboolean
 nautilus_directory_is_local (NautilusDirectory *directory)
 {
+  g_autofree char* path = NULL;
+
+	g_return_val_if_fail (NAUTILUS_IS_DIRECTORY (directory), FALSE);
+
+	if (directory->details->location == NULL) {
+		return TRUE;
+	}
+
+  path = g_file_get_path (directory->details->location);
+
+	return nautilus_directory_is_in_trash (directory) ||
+               nautilus_directory_is_in_recent (directory) ||
+	       g_file_is_native (directory->details->location) ||
+         path != NULL;
+}
+
+gboolean
+nautilus_directory_is_local_or_fuse (NautilusDirectory *directory)
+{
+        g_autofree char* path = NULL;
+
 	g_return_val_if_fail (NAUTILUS_IS_DIRECTORY (directory), FALSE);
 	
 	if (directory->details->location == NULL) {
 		return TRUE;
 	}
 
+        /* If the glib reports a path, then it can use FUSE to convert the uri
+         * to a local path
+         */
+        path = g_file_get_path (directory->details->location);
+
 	return nautilus_directory_is_in_trash (directory) ||
                nautilus_directory_is_in_recent (directory) ||
-	       g_file_is_native (directory->details->location);
+	       g_file_is_native (directory->details->location) ||
+               path != NULL;
 }
 
 gboolean
