src/nautilus-directory.h
@@ -221,6 +221,7 @@ gboolean           nautilus_directory_are_all_files_seen       (NautilusDirector
 
 /* Return true if the directory is local. */
 gboolean           nautilus_directory_is_local                 (NautilusDirectory         *directory);
+gboolean           nautilus_directory_is_local_or_fuse         (NautilusDirectory         *directory);
 
 gboolean           nautilus_directory_is_in_trash              (NautilusDirectory         *directory);
 gboolean           nautilus_directory_is_in_recent             (NautilusDirectory         *directory);
